# django-template

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  compose.sh  compose.yml  docker-compose.dev.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
.hooks/: pre-commit
app/locale/pt_BR/LC_MESSAGES/: django.po
app/migrations/: 0001_initial.py
app/tests/: utils.py
core/: asgi.py  helpers.py  settings.py  tests.py
core/helpers/: __init__.py  installer.py  pretty_terminal.py
core/management/commands/: runserver.py
core/middleware/: clickjacking.py
core/settings/: __init__.py  _assets.py  _cors.py  _data_storages.py  _environment.py  _sentry.py  _settings.py
hooks/: pre-commit
scripts/: bandit.sh  flake8.sh  generate_secret_key.py  pylint.sh  run_linters.sh  setup_dev_env.sh
scripts/hooks/: pre-commit  pre-push
